[gd_scene load_steps=2 format=3 uid="uid://dfkrffav7kape"]

[ext_resource type="Script" path="res://scenes/session_browser/session_browser.gd" id="1_jw8q5"]

[node name="SessionBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jw8q5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Header" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 96.0
grow_horizontal = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Back"

[node name="Heading" type="Label" parent="Panel/VBoxContainer/Header/HBoxContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 70
text = "Available Sessions"
horizontal_alignment = 1

[node name="RefreshButton" type="Button" parent="Panel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Refresh"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SessionList" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="Panel/VBoxContainer/Header/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Header/HBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
